4.12.0
======
7 Jan 2026
- Update imperative DSL error message to include control statements

4.11.1
======
22 Dec 2025
- Update dependencies
  - Update scala from v3.7.3 to v3.7.4
  - Update gherkin from v35.1.0 to v37.0.0
  - Update logback-core from v1.5.19 to v1.5.22
  - Update logback-classic from v1.5.19 to v1.5.22
  - Update commons-codec from v1.19.0 to v1.20.0
  - Update commons-text from v1.14.0 to v1.15.0
  - Update json-path from v2.9.0 to v2.10.0
  - Update jackson-databind from v2.20.0 to v2.20.1
  - Update pdfbox from v3.0.5 to v3.0.6
  - Update pdfbox-io from v3.0.5 to v3.0.6

4.11.0
======
24 Oct 2025
- Check param scope when resolving bound values

4.10.3
======
8 Oct 2025
- Update dependencies
  - Update scala from v3.7.1 to v3.7.3
  - Update gherkin from v32.1.1 v35.1.0
  - Update jline from v3.30.4 to v3.30.6
  - Update logback from v1.5.18 to v1.5.19
  - Update commons-coded from v1.18.0 to v1.19.0
  - Update commons-text from v1.13.1 to v1.14.0
  - Update jackson-databind from v2.19.1 to v2.20.0
  - Update json-smart from v2.5.2 to v2.6.0
- Update test dependencies
  - Update mockito from v5.18.0 to v5.20.0
  - Update js-scriptengine from v24.2.1 to v25.0.0
  - Update js from v24.2.1 to v25.0.0

4.10.2
======
5 Sep 2025
- Generate names for unnamed CSV data columns
  - Use naming convention `unnamed_<index>` where `<index>` is col index of unnamed header

4.10.1
======
2 Sep 2025
- Remove dangling println

4.10.0
======
1 Sep 2025
- Add support for masking on template match extractions

4.9.6
=====
21 Aug 2025
- Assign default accumulated error message in Compare action instead of Step message
  - Fixes pretty formatting to ensure message annotation is not added

4.9.5
=====
3 Aug 2025
- Suppress empty implicit scope when dumping env

4.9.4
=====
5 Jul 2025
- Add eager and lazy binding values as attachments to results and reports

4.9.3
=====
1 Jul 2025
- Undo deprecation of meta level initialisation scenarios

4.9.2
=====
1 Jul 2025