@@ -1,6 +1,6 @@
 enablePlugins(GitVersioning)
 
-git.baseVersion := "4.11.1"
+git.baseVersion := "4.12.0"
 git.useGitDescribe := true
 
 lazy val gwen = (project in file("."))
